style.css
@import url('https://fonts.googleapis.com/css2?family=Asimovian&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mountains+of+Christmas:wght@400;700&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&family=TASA+Explorer:wght@400..800&display=swap');

body {
    padding: 0;
    margin: 0;
    font-family: "Montserrat", sans-serif;
    background-color: burlywood;
}

p {
    margin: 0;
}

header {
    display: flex;
    height: 7vh;
    width: 100vw;
    background-color:antiquewhite;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

header li {
    display: flex;
    justify-content: center;
}

header li a {
    margin-left: 5%;
    margin-right: 5%;
    padding-left: 10%;
    padding-right: 10%;
    text-decoration: none;
    font-size: 3vh;
    color: black;
}

.logo {
    margin-right: auto;
    margin-left: 2vw;
    height: 5vh;
}

.cart {
    margin-left: auto;
    height: 5vh;
    margin-right: 7.5vw;
    cursor: pointer;
}

.cart-div {
    display: none;
    flex-direction: column;
    width: 15vw;
    height: 30vh;
    position:fixed;
    top: 7vh;
    right: 2vw;
    background-color: white;
}

.cart-items {
    display: flex;
    width: 15vw;
    height: 23vh;
    background-color: rgb(231, 231, 231);
    overflow-y: scroll;
    flex-direction: column;
}

.cart-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5%;
    padding: 3%;
    border-bottom: 1px solid gray;
    background-color: white;
}

.cart-item-img {
    width: 80px;
    height: 80px;
    align-self: center;
}

.cart-item-name {
    font-size: 1.2vh;
    font-weight: bold;
}

.cart-item-price {
    font-size: 1vh;
    color: green;
}

.cart-item-seller {
    font-size: 1vh;
    color: gray;
}

.cart-remove {
    width: 30px;
    height: 30px;
    align-self: center;
    margin-left: auto;
}

.cart-checkout {
    width: 15vw;
    height: 7vh;
    background-color: green;
    text-align: center;
    align-content: center;
    cursor: pointer;
}

.cart-checkout p {
    color: white;
    font-size: 3vh;
}

main {
    display: flex;
    height: 93vh;
}

.products {
    display: flex;
    flex-wrap: wrap;
    align-content:start;
    background-color: rgb(94, 94, 94); 
    height: 93vh;
    width: 60vw;
    justify-content: center;
}

.product {
    display: flex;
    align-content:end;
    justify-content: center;
    flex-wrap: wrap;
    background-color: white;
    width: 20vh;
    height: 25vh;
    margin: 1%;
    min-width: 100px;
    max-width: 500px;
}

.add-to-cart {
    width: 20vh;
    height: 5vh;
    background-color: green;
    cursor: pointer;
    text-align: center;
    align-content: center;
    min-width: 100px;
    max-width: 500px;
}

.add-to-cart p {
    color: white;
    font-size: 2vh;
    min-width: 100px;
    max-width: 500px;
    max-height: 5vh;
    white-space: nowrap;
    overflow-x: hidden;
}

.product-info {
    background-color:antiquewhite;
    width: 20vh;
    height: 9vh;
    min-width: 100px;
    max-width: 500px;
}

.name-base {
    background-color:rgb(127, 255, 251);
    width: 20vh;
    height: 3vh;
    min-width: 100px;
    max-width: 500px;
}

.price-base {
    background-color:aquamarine;
    width: 20vh;
    height: 3vh;
    min-width: 100px;
    max-width: 500px;
}

.created-base {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color:rgb(127, 255, 182);
    width: 20vh;
    height: 3vh;
    min-width: 100px;
    max-width: 500px;
}

.created-label {
    font-size: 1.5vh;
    white-space: nowrap;
    overflow-x: hidden;
}

.created-person {
    font-size: 1.8vh;
    font-weight: bold;
    overflow-x: hidden;
}

p {
    font-size: 1.5vh;
    line-height: 3vh;
}

.product-img {
    width: 20vh;
    height: 11vh;
    min-width: 100px;
    max-width: 500px;
}

.product-img img {
    width: 20vh;
    height: 11vh;
    min-width: 100px;
    max-width: 500px;
}

main section .side-menu {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    height: 93vh;
    width: 15vw;
    background-color:burlywood;
}

.category {
    width: 15vw;
    height: 10%;
    margin: 0;
    align-content: center;
    text-align: center;
    font-size: 2vw;
    border-bottom: 1px solid gray;
}

main section .filters {
    display: flex;
    height: 93vh;
    width: 25vw;
    background-color:burlywood;
}

.form {
    width: 20vw;
    height: 2%;
}

form label {
    font-size: 2vh;
}

section .about {
    display: flex;
    background-color: black;
    height: 50vh;
}

@media screen and (max-width: 600px) {
    header li a {
        margin-left: 5%;
        margin-right: 5%;
        padding-left: 10%;
        padding-right: 10%;
        text-decoration: none;
        font-size: 18px;
        color: black;
    }

    .cart-div {
    display: none;
    flex-direction: column;
    width: 80%;
    height: 80%;
    position:fixed;
    top: 10%;
    right: 10%;
    background-color: white;
    }

    .cart-items {
    display: flex;
    width: 100%;
    height: 80vh;
    background-color: rgb(231, 231, 231);
    overflow-y: scroll;
    flex-direction: column;
    }

    .cart-checkout {
    width: 100%;
    height: 20vh;
    background-color: green;
    text-align: center;
    align-content: center;
    cursor: pointer;
    margin-top: auto;
    }

    .cart-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 20%;
    gap: 5%;
    padding: 3%;
    border-bottom: 1px solid gray;
    background-color: white;
    }
}

